Kubernetes/dhanvantari-service.yml
apiVersion: v1
kind: Service
metadata:
  name: dhanvantari-website
  labels:
    app: website
spec:
  selector:
    app: website

  ports:
    - port: 8080
      targetPort: 8080

  type: LoadBalancer
